fixing visibility of the hamburguer menu

--- a/lesson04/css/small.css
+++ b/lesson04/css/small.css
@@ -63,9 +63,10 @@ header nav{
 
 .hamburguer{
   margin: .2rem, 2%;
+  padding-right: 20px;
   background-color: transparent;
   border: none;
-  font-size: 1.6rem;
+  font-size: 2.1rem;
   color:#58524E;
 }
 
